# midi_synthesizer

./: CMakeLists.txt  CONFIGURATION_INTEGRATION.md  LISSAJOUS_INTEGRATION.md  PCF8574_I2C_BUS_FIX.md  QUICK_REFERENCE.md  README.md  SYSEX_COMMANDS.md  cmake_output.txt
lib/buzzer/: CMakeLists.txt  README.md  buzzer.c  buzzer.h
lib/i2c_memory/: CMakeLists.txt  README.md
lib/i2c_memory/drivers/: at24cxx_driver.c  at24cxx_driver.h
lib/i2c_midi/: CMakeLists.txt  COMPILE_OPTIONS.md  README.md  REFACTORING.md  i2c_midi.c  i2c_midi.h
lib/i2c_midi/drivers/: README.md  ch423_driver.c  ch423_driver.h  pcf857x_driver.c  pcf857x_driver.h
lib/i2c_pca9685_midi/: CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  i2c_pca9685_midi.c  i2c_pca9685_midi.h
lib/i2c_pca9685_midi/drivers/: pca9685_driver.c  pca9685_driver.h
lib/mallet_midi/: CMakeLists.txt  README.md  mallet_midi.c  mallet_midi.h
lib/oled_display/: ARCHITECTURE.md  CMakeLists.txt  LISSAJOUS_README.md  PYTHON_TO_C_COMPARISON.md  README.md  lissajous_example.c  lissajous_screensaver.c  lissajous_screensaver.h  oled_display.c  oled_display.h
src/: CONFIGURATION_README.md  button_handler.c  button_handler.h  configuration_settings.c  configuration_settings.h  debug_uart.c  debug_uart.h  display_handler.c  display_handler.h  menu_handler.c  menu_handler.h  midi_handler.c  midi_handler.h  midi_synthesizer.c  tusb_config.h  usb_descriptors.c  usb_midi.c  usb_midi.h
